# pivot-blender-bridge

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GITHUB_ACTIONS_IMPLEMENTATION.md  GITHUB_ACTIONS_SETUP.md  README.md  __init__.py  assets.blend  assets.blend1  build_wheel.py  constants.py  operators.py  pyproject.toml  ui.py
.github/: copilot-instructions.md
.github/workflows/: build.yml
core/: CMakeLists.txt  classification.h
cpp/: shm_bridge.cpp  shm_bridge.h
cython/: CMakeLists.txt  CONTEXT.md  bridge.pyx  classification.pyx  collection_manager.pyx  edition_flags.pxi.in  edition_utils.pyx  engine_state.pyx  group_manager.pyx  id_manager.pyx  selection_utils.pyx  shm_utils.pyx  standardize.pyx  surface_manager.pyx
cython/operators/: __init__.pyx  classify_object.pyx  standardize.pyx
cython/operators/prepare/: __init__.pyx  bridge.pyx
cython/shared/: classification.pyx  edition_utils.pyx  group_manager.pyx  selection_utils.pxd  selection_utils.pyx  shm_bridge.pxd  shm_bridge.pyx  shm_utils.pyx  surface_manager.pyx  sync_manager.pyx
native/: __init__.py  setup.py  timer_manager.py
pivot/: __init__.py  blender_manifest.toml  classes.py  classification_utils.py  collection_manager.py  constants.py  engine.py  engine_state.py  handlers.py  mesh_sync.py  surface_manager.py  ui.py
pivot/lib/: __init__.py
pivot/operators/: __init__.py  classification.py  group_classification.py  object_classification.py  operators.py
pivot/wheels/: pivot_lib-1.0.0-cp311-cp311-linux_x86_64.whl
pivot_lib/: setup.py
splatter/: __init__.py  bridge.pyx  classes.py  collection_manager.py  constants.py  engine.py  engine_state.py  group_manager.py  handlers.py  operators.py  property_manager.py  surface_manager.py  sync_manager.py  ui.py  utils.py
splatter/cython_api/: bounds_api.pxd  chull_api.pxd  engine_api.pxd  util_api.pxd  vec_api.pxd
splatter/engine/: analysis.cpp  analysis.h  bounds.cpp  bounds.h  chull.cpp  chull.h  engine.cpp  engine.h  geo2d.cpp  geo2d.h  main.cpp  util.h  voxel.cpp  voxel.h  wire_detect.cpp  wire_detect.h
splatter/engine/object/analysis/: ground.cpp  ground.h  wall.cpp  wall.h
splatter/engine/object/computation/: b_box.cpp  b_box.h  voxel.cpp  voxel.h  wire_detect.cpp
splatter/engine/object/util/: geo2d.h  linalg3.cpp  linalg3.h
splatter/engine/share/: vec.h
splatter/operators/: classification.py  operators.py
